# quex

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml  version-bump.yml
docs/: _config.yml  _toc.yml  index.md  installation.md
docs/_static/: default.css
docs/tutorials/: parameterised-circuits.ipynb  quickstart.ipynb  random-circuit-generation.ipynb  simulation-examples.ipynb
scripts/: bump-version.py
src/quex/: __init__.py  circuit.py  gates.py  parser.py  qrandom.py  utils.py  vis.py  weave.py
src/quex/backends/: __init__.py  base.py  cupy_sim.py  jax_sim.py  numpy_sim.py
tests/: test_circuit.py
