[project]
name = "quex"
version = "0.1.0"
description = "Simulator Backend for Quantum Computing"
readme = "README.md"
authors = [
    { name = "Rajarshi Tiwari", email = "rajarshi.tiwari@ichec.ie" }
]
requires-python = ">=3.10"
dependencies = [
    "openqasm3[parser]>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "pytest>=9.0.3",
    "qiskit>=2.4.1",
    "ruff>=0.15.12",
]
