[project]
name = "quex"
version = "0.3.0"
description = "Simulator Backend for Quantum Computing"
readme = "README.md"
authors = [
    { name = "Rajarshi Tiwari", email = "rajarshi.tiwari@ichec.ie" }
]
requires-python = ">=3.11"
dependencies = [
    "openqasm3[parser]>=1.0.1",
    "threadpoolctl>=3.6.0",
]

keywords = ["Quantum Execution", "Quantum Computing", "numpy", "jax", "cupy", "nvidia", "amd"]
classifiers = ["Programming Language :: Python"]

[project.urls]
homepage = "https://github.com/ICHEC/quex"
Documentation = "https://ichec.github.io/quex" 
Repository = "https://github.com/ICHEC/qse.git"
Issues = "https://github.com/ICHEC/qse/issues"

[project.optional-dependencies]
# ==========================================
# 1. GRANULAR EXTRAS (For Power Users)
# ==========================================
jax-cpu = ["jax>=0.6.2", "jaxlib>=0.6.2"]
jax-apple = ["jax>=0.6.2", "jaxlib>=0.6.2", "jax-metal; sys_platform == 'darwin' and platform_machine == 'arm64'"]
jax-nvidia = ["jax[cuda12]>=0.6.2"]
cupy-nvidia = ["cupy-cuda12x"]
jax-amd = ["jax>=0.6.2", "jaxlib>=0.6.2", "jax-rocm60-plugin"]
cupy-amd = ["cupy-rocm-7-0; python_version < '3.12'"]

# ==========================================
# 2. MACRO EXTRAS ("Batteries Included")
# ==========================================
cpu = ["quex[jax-cpu]"]
metal = ["quex[jax-apple]"]
nvidia = ["quex[jax-nvidia]", "quex[cupy-nvidia]"]
amd = ["quex[jax-amd]", "quex[cupy-amd]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "pytest>=9.0.3",
    "qiskit>=2.4.1",
    "ruff>=0.15.12",
]
docs = [
    "ipykernel>=7.2.0",
    "jupyter-book>=1.0.0,<2.0.0",
    "jupyter-sphinx>=0.5.3",
    "myst-nb>=1.4.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-togglebutton>=0.4.5",
    "sphinxcontrib-mermaid>=2.0.1",
]

[tool.ruff]
# Replaces both Black's and Flake8's max-line-length
line-length = 180
# Replaces Black's target-version
target-version = "py310"

[tool.ruff.lint]
# Select the rule sets you want:
# E = pycodestyle errors, W = pycodestyle warnings, F = pyflakes, I = isort
select = ["E", "W", "F", "I"]

# Replaces your Flake8 ignore list
ignore = [
    "E501", # Line too long (handled automatically by the formatter instead)
    "E741", # Ambiguous variable name
    "E262", # Inline comment should start with '# '
]

[tool.ruff.format]
# Ruff's formatter is Black-compatible by default, so you don't need
# the old `profile = "black"` from isort. It just works.
quote-style = "double"
